Added working cardForm and columnForm

--- a/src/components/TextInput/TextInput.module.scss
+++ b/src/components/TextInput/TextInput.module.scss
@@ -8,4 +8,11 @@
     margin: 0 0 $base-size 0;
     font-family: $font-text;
     border-radius: $radius;
+    outline: none;
+    transition: 0.3s;
+}
+
+.input:focus{
+    outline: solid 1px #858483;
+    background-color: #d9d8d7;
 }
