Added links activation

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -2,7 +2,7 @@
 
 .nav {
     background: darken($color-dark, 3%);
-
+    text-decoration: none;
     padding: $base-size;
 }
 
@@ -16,15 +16,21 @@
 
 .logo { 
     font-size:24px;
+    color: white;
 }
 
-.menu .link{
+.menu .link {
     display: inline;
     margin: 0 10px;
+
+    font-weight: bold;
 }
 
-.link a{
+nav a{
     text-decoration: none;
     color: white;
-    font-weight: bold;
+}
+
+.linkActive {
+    color: $color-warning;
 }
