Added favorite cards

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -11,3 +11,13 @@
     justify-content: space-between;
     font-weight: bold;
 }
+
+.star {
+    background-color: transparent;
+    outline: none;
+    border: none;
+}
+
+.active{
+    color: gold;
+}
