--- a/src/components/Favorite/Favorite.module.scss
+++ b/src/components/Favorite/Favorite.module.scss
@@ -1,14 +1,28 @@
+@use "sass:math";
 @import '../../styles/settings.scss';
 
 .hero {
     padding: $base-size;
   }
   
+
+  .cards {
+    padding: math.div($base-size, 2) 0;
+    flex-shrink: 0;
+    background: $color-light;
+    margin: 0 $base-size $base-size 0;
+    padding: ($base-size * 2);
+    border-radius: $radius;
+    box-shadow: 0 math.div($base-size, 4) 0 rgba(0,0,0,0.3);
+    color: $color-dark;
+  }
+
 .title {
     padding: ($base-size * 3) 0;
     text-align: center;
     font-size: ($base-size * 3);
     text-transform: uppercase;
+    color: black;
   }
 
 .subtitle {
@@ -18,4 +32,10 @@
     font-style: italic;
     font-weight: normal;
     margin-top: (- $base-size * 3);
+  }
+
+  .no_cards{
+    padding: ($base-size * 3) 0;
+    font-size: ($base-size * 3);
+    text-transform: uppercase;
   }
