--- a/src/components/Favorite/Favorite.module.scss
+++ b/src/components/Favorite/Favorite.module.scss
@@ -7,14 +7,16 @@
   
 
   .cards {
+    max-width: 600px;
     padding: math.div($base-size, 2) 0;
     flex-shrink: 0;
     background: $color-light;
-    margin: 0 $base-size $base-size 0;
+    margin: 0 auto;
     padding: ($base-size * 2);
     border-radius: $radius;
     box-shadow: 0 math.div($base-size, 4) 0 rgba(0,0,0,0.3);
     color: $color-dark;
+    
   }
 
 .title {
@@ -22,7 +24,6 @@
     text-align: center;
     font-size: ($base-size * 3);
     text-transform: uppercase;
-    color: black;
   }
 
 .subtitle {
